---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-01-15
  Changes:
    - Removed dependency on Space Age.
    - Minor graphics fix.
    - Changed recipe.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-01-14
  Features:
    - Initial release, significant code copied from Burner Generator mod by rophl.